# Eagle-Claw

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  OpenGL.sln  premake5.lua
EagleClaw/: Camera.cpp  Camera.h  EagleClaw.vcxproj  EagleClaw.vcxproj.filters  premake5.lua
EagleClaw/src/: EagleClaw.h  Egcpch.h  Preheader.cpp  Preheader.h
EagleClaw/src/EagleClaw/Core/: Application.cpp  Application.h  ApplicationEvent.h  Base.cpp  Base.h  Core.h  EntryPoint.h  Event.h  Log.h  (+5 more)
GRender/: CMakeLists.txt
GRender/interface/GRender/: GRender.h
GRender/src/core/impl/: Application.cpp  Base.cpp  Log.cpp  window.cpp
GRender/src/core/include/core/: Application.h  ApplicationEvent.h  Base.h  EntryPoint.h  Event.h  Layer.h  LayerStack.h  Log.h  assets.h  window.h
GRender/src/platform/GL/impl/: GLBuffer.cpp  GLContext.cpp  GLRendererAPI.cpp  GLShader.cpp  GLTexture.cpp  GLVertexArray.cpp
GRender/src/platform/GL/include/GL/: GLBuffer.h  GLContext.h  GLRendererAPI.h  GLShader.h  GLTexture.h  GLVertexArray.h
GRender/src/platform/GLFWindow/impl/: GWindow.cpp
GRender/src/platform/GLFWindow/include/GLFWindow/: GWindow.h
GRender/src/renderer/impl/: Buffer.cpp  GraphicsContext.cpp  Renderer.cpp  RendererAPI.cpp  RendererCommand.cpp  Shader.cpp  VertexArray.cpp
GRender/src/renderer/include/renderer/: Buffer.h  Camera.h  EditorCamera.h  GraphicsContext.h  Renderer.h  RendererAPI.h  RendererCommand.h  Shader.h  Texture.h  VertexArray.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  premake5.lua
Sandbox/src/: Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h
script/: format.py
(+44 files in other folders)
